# pomelo-udp-quickjs

./: .gitmodules  CMakeLists.txt
example/: client.js  server.js  shared.js
include/pomelo-qjs/: core.h  logger.h  runtime.h
include/pomelo-qjs/runtimes/: runtime-uv.h
lib/: pomelo.d.ts  pomelo.js
src/: module.c
src/core/: channel.c  channel.h  context.c  context.h  core.c  core.h  enums.c  enums.h  functions.c  functions.h  message.c  message.h  plugin.c  plugin.h  session.c  session.h  socket.c  socket.h  token.c  token.h
src/logger/: logger.h
src/runtime/: runtime-uv.c  runtime-uv.h  runtime.c  runtime.h
src/standalone/: standalone.c
src/std/: console.c  console.h  std.c  std.h  timer.c  timer.h
test/: index.js  message-test.js  socket-test.js  std-test.js  token-test.js
